<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.elamoreslomasgrande.volley1.NavigationChildren.CambiarPass"
    tools:showIn="@layout/activity_cambiar_pass">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/cambiarPassContraActual1"
        android:layout_marginTop="23dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiarPassContraActual2"
        android:layout_marginHorizontal="16dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/cambiarPassContraNueva1"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiarPassContraNueva2"
        android:layout_marginHorizontal="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/cambiarPassContraRepetir1"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiarPassContraRepetir2"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:layout_width="122dp"
        android:layout_height="36dp"
        android:text="@string/cambiarPassCambiar"
        android:textAllCaps="false"
        android:layout_gravity="right"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:id="@+id/btnCambiar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiarPassContraOlvidada"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"/>
</LinearLayout>
