<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/title_home"
        android:icon="@drawable/ic_home_push"
        android:state_checked="false"
    />


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_mis_candidaturas"
        android:state_checked="false"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notificaciones"
        android:state_checked="false"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_portfolio"
        android:icon="@drawable/ic_perfil"
        android:state_checked="false"
        android:title="@string/title_portfolio" />

</menu>
