<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingHorizontal="45dp"
    tools:context="com.example.elamoreslomasgrande.volley1.Login.RecuperarPass">
    <ImageView
        android:layout_width="111dp"
        android:layout_height="111dp"
        android:src="@drawable/circle"
        android:layout_marginBottom="26dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#000000"
        android:letterSpacing="0.03"
        android:gravity="center_horizontal"
        android:text="@string/recuperar_password_cuerpo"
        android:layout_marginBottom="43dp"/>
    <EditText
        android:layout_width="269.2dp"
        android:layout_height="48dp"
        android:hint="@string/login_mail"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:backgroundTint="#000000"
        />
    <TextView
        android:layout_width="269.2dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:text="@string/recuperar_password_incorrecto"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:textAllCaps="false"
        android:text="@string/login_entrar"
        android:layout_marginBottom="70dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_password_inicio"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#000000"
        android:letterSpacing="0.03"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_registrarse"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#000000"
        android:letterSpacing="0.03"
        android:gravity="center_horizontal"/>
</LinearLayout>
