<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="45dp"
    tools:context="com.example.elamoreslomasgrande.volley1.Login.LoginEmpresa">

    <ImageView
        android:layout_width="111dp"
        android:layout_height="111dp"
        android:src="@drawable/circle"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="43dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:letterSpacing="0.03"
        android:text="@string/login_empresa_info"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="269.2dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#000000"
        android:hint="@string/login_mail"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/Pass"
        android:layout_width="269.2dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#000000"
        android:hint="@string/login_psswd"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/login"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login_entrar"
        android:onClick="Login"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="270dp"
        android:layout_height="36dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:letterSpacing="0.03"
        android:text="@string/login_olvidada"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:letterSpacing="0.03"
        android:text="@string/login_registrarse"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal"
        android:onClick="registrarse"/>
</LinearLayout>
