<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.elamoreslomasgrande.volley1.Navigation.PortfolioChildren.EditarEducacion">
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editarEducacionFormacion"
                android:layout_marginTop="23dp"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editarEducacionCentro"
                android:layout_marginTop="23dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editarEducacionAños"
                android:layout_marginTop="35dp"/>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editarEducacionMeses"
                android:layout_marginTop="13dp"/>

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editarEducacionDescripcion"
                android:lines="5"
                android:background="@drawable/border_edit_text"
                android:inputType="textMultiLine"
                android:layout_marginTop="60dp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="122dp"
                android:layout_height="36dp"
                android:text="@string/cuentaEmpresaBtnGuardar"
                android:layout_gravity="right"
                android:layout_marginTop="35dp"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
