<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.elamoreslomasgrande.volley1.Navigation.PortfolioChildren.EditarBiografia">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">
        <EditText
            android:id="@+id/campo_mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editarBiografíaBiografia"
            android:textColorHint="#9b9b9b"
            android:background="@drawable/border_edit_text"
            android:inputType="textMultiLine"
            android:maxLength="130"
            android:lines="6"
            />

        <TextView
            android:id="@+id/texto_contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Contador carácteres"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editarBiografíaCiudad"
            android:layout_marginTop="16dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuentaEmpresaBtnGuardar"
            android:layout_gravity="right"
            android:layout_marginTop="63dp"/>

    </LinearLayout>




    <include layout="@layout/content_editar_biografia" />
</LinearLayout>
